syntax = "proto2";
option optimize_for = SPEED;
option java_package = "routing";

message Route {
	enum Path {
    PING = 0;
    NETWORK_DISCOVERY = 1;
    USER = 2;
    MESSAGE = 3;
    GROUP = 4;
}

    // a node should not have a value though this is not enforced
    required int64 id = 1;
    required Path path = 2;
     
    optional string payload = 3;
    optional NetworkDiscoveryPacket networkDiscoveryPacket = 4;
    optional User user = 5;
    optional Message message = 6;

}

message User {
     // a node should not have a value though this is not enforced
     required string email = 1;
     optional string password = 2;
     optional string recentActiveTime = 3;
 }

 message Message {
 	enum Type{
    SINGLE = 0;
    GROUP = 1;
    }
    
    enum Status{
    ACTIVE = 0;
    STALE = 1;
    }
    
     // a node should not have a value though this is not enforced
     required Type type = 0;
     required string from = 1;
     required string payload = 2;
     required string to = 3; // would be groupId if the type is GROUP or else userId if the type is SINGLE
     required string timestamp = 4;
     required Status status = 5;
 }
 
 message NetworkDiscoveryPacket{
 	
 	enum Sender{
    EXTERNAL_SERVER_NODE=0;
    INTERNAL_SERVER_NODE=1;
    END_USER_CLIENT=2;
    }
    
    	enum Mode{
    REQUEST=0;
    RESPONSE=1;
    }
    
    required Mode mode = 1;
    required Sender sender = 2 [default = SERVER_NODE];
    optional string groupTag = 3; //If sender is a server node, then this field can contain its group id. If sender is end user client, then this field is not required.
    optional string nodeId = 4; //node id of the sender
    required string nodeAddress = 5;
    required string nodePort = 6;
    required string secret = 7;
 
 }
